check.out
warning: adapteros-lora-kernel-mtl@0.13.1: Kernel hash: 165822cedec712da19cfcddeb028f7e49d15c5c4f7587e550c180ee704f92ffa
warning: adapteros-lora-kernel-mtl@0.13.1: Kernel aos_kernels.metal not found, skipping
    Checking adapteros-boot v0.13.1 (/Users/star/Dev/adapter-os/crates/adapteros-boot)
warning: adapteros-lora-mlx-ffi@0.13.1: Found MLX at: /opt/homebrew (0.30.3)
warning: adapteros-lora-mlx-ffi@0.13.1: =========================================================
warning: adapteros-lora-mlx-ffi@0.13.1: MLX BACKEND: Real C++ FFI (feature 'mlx' enabled)
warning: adapteros-lora-mlx-ffi@0.13.1: MLX version: 0.30.3
warning: adapteros-lora-mlx-ffi@0.13.1: Include path: /opt/homebrew/include
warning: adapteros-lora-mlx-ffi@0.13.1: Library path: /opt/homebrew/lib
warning: adapteros-lora-mlx-ffi@0.13.1: Compatibility probe: PASSED
warning: adapteros-lora-mlx-ffi@0.13.1: =========================================================
    Checking adapteros-lora-mlx-ffi v0.13.1 (/Users/star/Dev/adapter-os/crates/adapteros-lora-mlx-ffi)
warning: adapteros-lora-kernel-coreml@0.13.1: CoreML bridge compiled successfully
warning: adapteros-lora-kernel-coreml@0.13.1: Swift CoreML bridge compiled successfully
    Checking adapteros-tui v0.2.0 (/Users/star/Dev/adapter-os/crates/adapteros-tui)
    Checking adapteros-benchmarks v0.13.1 (/Users/star/Dev/adapter-os/tests/benchmark)
warning: unused import: `KmsProvider`
  --> crates/adapteros-crypto/tests/kms_security.rs:12:84
   |
12 | use adapteros_crypto::providers::kms::{KmsProviderType, KmsConfig, KmsCredentials, KmsProvider, KmsManager};
   |                                                                                    ^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: `adapteros-crypto` (test "kms_security") generated 1 warning
warning: variant `Network` is never constructed
   --> crates/adapteros-core/src/error_macros.rs:389:9
    |
387 |     enum LocalError {
    |          ---------- variant in this enum
388 |         Parse(String),
389 |         Network(String),
    |         ^^^^^^^
    |
    = note: `LocalError` has a derived impl for the trait `Debug`, but this is intentionally ignored during dead code analysis
    = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: `adapteros-core` (lib test) generated 1 warning
    Checking adapteros-secd v0.13.1 (/Users/star/Dev/adapter-os/crates/adapteros-secd)
    Checking adapteros-federation v0.13.1 (/Users/star/Dev/adapter-os/crates/adapteros-federation)
error[E0277]: `(dyn RoutingRecorder + 'static)` doesn't implement `std::fmt::Debug`
   --> crates/adapteros-lora-mlx-ffi/src/generation.rs:223:5
    |
210 | #[derive(Debug)]
    |          ----- in this derive macro expansion
...
223 |     pub recorder: Option<Arc<dyn RoutingRecorder>>,
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `std::fmt::Debug` is not implemented for `(dyn RoutingRecorder + 'static)`
    |
    = help: the following other types implement trait `std::fmt::Debug`:
              &dyn protobuf::reflect::message::generated::MessageFactory
              dyn std::any::Any + std::marker::Send + Sync
              dyn std::any::Any + std::marker::Send
              dyn std::any::Any
              dyn tracing::Value

For more information about this error, try `rustc --explain E0277`.
warning: adapteros-lora-mlx-ffi@0.13.1: Found MLX at: /opt/homebrew (0.30.3)
warning: adapteros-lora-mlx-ffi@0.13.1: =========================================================
warning: adapteros-lora-mlx-ffi@0.13.1: MLX BACKEND: Real C++ FFI (feature 'mlx' enabled)
warning: adapteros-lora-mlx-ffi@0.13.1: MLX version: 0.30.3
warning: adapteros-lora-mlx-ffi@0.13.1: Include path: /opt/homebrew/include
warning: adapteros-lora-mlx-ffi@0.13.1: Library path: /opt/homebrew/lib
warning: adapteros-lora-mlx-ffi@0.13.1: Compatibility probe: PASSED
warning: adapteros-lora-mlx-ffi@0.13.1: =========================================================
error: could not compile `adapteros-lora-mlx-ffi` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
warning: adapteros-lora-mlx-ffi@0.13.1: Found MLX at: /opt/homebrew (0.30.3)
warning: adapteros-lora-mlx-ffi@0.13.1: =========================================================
warning: adapteros-lora-mlx-ffi@0.13.1: MLX BACKEND: Real C++ FFI (feature 'mlx' enabled)
warning: adapteros-lora-mlx-ffi@0.13.1: MLX version: 0.30.3
warning: adapteros-lora-mlx-ffi@0.13.1: Include path: /opt/homebrew/include
warning: adapteros-lora-mlx-ffi@0.13.1: Library path: /opt/homebrew/lib
warning: adapteros-lora-mlx-ffi@0.13.1: Compatibility probe: PASSED
warning: adapteros-lora-mlx-ffi@0.13.1: =========================================================
error: could not compile `adapteros-lora-mlx-ffi` (lib test) due to 1 previous error
